<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- General Strings -->
    <string name="app_name">Trade Gems</string>    
    <string name="luminia_logo">Luminia Logo</string>
    
    <!-- Preference Strings -->
    <string name="nickname_preference_title">Player\'s name</string>
    <string name="nickname_preference_summary">Please choose a nickname</string>
    <string name="default_nickname">Anonymous</string>
    
    <!-- Preference keys -->
    <string name="key_preferences">game_preferences</string>
    <string name="key_nickname">nickname_preference</string>
    <string name="key_account">account_key</string>
    <string name="accounts_preference_title">Accounts</string>
    <string name="accounts_preference_summary">You can change your main account address here</string>
    
	<!-- Main menu strings -->
	<string name="play_game">Play Trade Gems</string>
	<string name="view_top_ten_scores">View Top Ten Scores</string>
	<string name="view_location_of_scores">View Location Of Scores</string>
	<string name="view_about">About</string>
	<string name="settings">Settings</string>
	<string name="view_highscores">View High Scores</string>  
	
	    
    <!-- Loading Screen -->
    <string name="loading_text">Loading, please wait(…,&#8230;)</string>
    <string name="progress_text">Progress: 0%</string>
    
    <!-- Game Strings -->
    <string name="record_score_congrats">Record score!</string>
    <string name="record_score">Record score: </string>
    <string name="score">Current score: </string>
    <string name="turns">Turns: </string>
    
    <string name="pause">Pause</string>
    <string name="pause_title">Game Paused</string>
    <string name="pause_image">Pause Image</string>
    <string name="pause_text">Touch to Resume</string>
    
    <!--  ScoreDialog Strings -->
    <string name="high_score">High Score</string>
    <string name="share_score">Share Your Score With The World?</string>
    <string name="player_name">Name: </string>
    <string name="username">User Name</string>
    <string name="submit_button">Submit</string>
    <string name="confirm_button">Yes</string>
	<string name="cancel_button">No</string>
	
	<!-- About Strings -->
    <string name="about_text">To play Trade Gems, select any two gems to trade place. If a row or a column of gems is all the same color, they are whisked away and your score is increased. See how many gems you can remove in 10 turns.</string>
    <string name="about_text_title">About Swap Gems</string>
    
	<!-- Select Account dialog strings -->
	<string name="select_account_dialog_title">Please select an account</string>
	<string name="select_account">Select</string>
	<string name="select_account_explanation">In order to provide a global Geo-Ranking we need to know which account to use to identify you as a player. If you choose to play anonymously you will not be able to post your highest scores on-line</string>
	
	<!-- Enter Nickname dialog strings -->
	<string name="enter_nickname_title">Please enter your desired nickname</string>
	<string name="nickname_hint">Player101</string>
	
	<!-- Google Map API Key -->
	<string name="map_debug_key">0ZAKS-9FmW0GVvakk-myLYSDr2-Q4gGfkDCXTCA</string>
	
	<!-- Top ten activity -->
	<string name="top_ten_title">Top ten scores</string>
</resources>