<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/dialogRoot"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical" 
  android:gravity="center"
  android:padding="20dp"
  android:background="#333333">
	<TextView 
		android:text="@string/share_score"
		android:textColor="#FBB040"
		android:textStyle="bold"
		android:textSize="110dp"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"/>
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
  		android:gravity="center">
		<TextView 
			android:text="@string/player_name"
			android:textColor="#FBB040"
			android:textStyle="bold"
			android:textSize="18dp"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
		<EditText 
			android:text="@string/username" 
			android:id="@+id/playerName" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
  		android:gravity="center">
		<Button
			android:id="@+id/confirmButton"
			android:text="@string/confirm_button"
			android:textSize="24dp"
			android:textStyle="bold"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
		/>
  		<Button
			android:id="@+id/cancelButton"
			android:text="@string/cancel_button"
			android:textSize="24dp"
			android:textStyle="bold"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"
		/>
		
	</LinearLayout>

</LinearLayout>
