<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:text="@string/enter_nickname_title"
		android:gravity="center"
        android:textSize="@dimen/title_size"/>

    <EditText
        android:id="@+id/editNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
		android:hint="@string/nickname_hint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    <Button
        android:id="@+id/select_nickname_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button" />

</LinearLayout>