<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/dialogRoot"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" 
  android:orientation="vertical" 
  android:gravity="center"
  android:padding="20dp"
  android:background="#333333">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >
        <TextView 
            android:text="@string/record_score_congrats"
			style="@style/TradeGemsText.Large"/>
    </LinearLayout>

  	<LinearLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
  		android:gravity="center">
		<TextView 
			android:text="@string/score"
			style="@style/TradeGemsText.Large"/>		
		<TextView 
			android:text=""
			android:id="@+id/current_score"
			style="@style/TradeGemsText.Large"/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
  		android:gravity="center">
		<Button
			android:id="@+id/confirmButton"
			android:text="@string/submit_button"
			android:textSize="24sp"
			android:textStyle="bold"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content"/>	
	</LinearLayout>

</LinearLayout>
